Thu Jan 28 01:01:20 2016  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_inspect): make human readable.
	  old) #<Thread:0x007f5cef440400@th1@../test test.rb:4 run>
	  new) #<Thread:0x007fd553be7e10, @name=th1, @proc="../test test.rb:4", @status=run>
	  Especially old style is toxic when a filename have space.

Sat Dec 26 11:14:59 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_sync.c (mutex_inspect): implement nice Mutex::inspect.
	  example)
	   #<Thread::Mutex:0x007fd965a7a1e8, @locked=true, @owner=#<Thread:0x007fd9657fe298 run>>

Thu Dec 24 17:37:43 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_sync.c (Init_thread_sync): sort Mutex's rb_define_method
	  into alphabetical order.

Tue Dec 15 16:39:04 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/monitor.rb (MonitorMixin::ConditionVariable#wait): use
	Thread.handle_interrupt for avoiding races.

Tue Dec 15 16:24:39 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/monitor.rb: remove @mon_owner. Mutex.owned? is a better way.

Tue Dec 15 16:09:04 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/monitor/test_monitor.rb
	(TestMonitor#test_enter_second_after_killed_thread): remove
	  never reached statement for clarification.

Fri Dec 18 10:24:44 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/irb/ruby-lex.rb: fixed parse error for striped heredocument syntax.
	  [fix GH-1127] Patch by @koic

Fri Dec 18 09:44:47 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/pty/pty.c: fix double words typo.
	  [ci skip][fix GH-1157] Patch by @jwworth

Fri Dec 18 09:42:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/nkf/nkf-utf8/utf8tbl.c: fix a typo.
	  [ci skip][fix GH-1159] Patch by @akshay-vishnoi
	* ext/nkf/nkf-utf8/utf8tbl.h: ditto.

Fri Dec 18 07:39:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm.c (rb_vm_check_redefinition_opt_method): should check the real
	  class instead of the origin iclass.